# ai-at-risk

./: .env.example  .env.railway  .gitignore  DEVELOPMENT.md  README.md  about_this.html  admin.html  character_library.html  deploy-railway.sh  diagrams.md  embed_characters.html  embed_models.html  game_setup.html  healthcheck.py  pyproject.toml  risk_dashboard.html  risk_dashboard_briefing.html  support_me.html  tournament_interface.html  tournament_leaderboard.html
agents/: __init__.py  agent_state.py  context_summarizer.py  game_narrator.py  game_runner.py  main.py  memory_manager.py  memory_policies.py  player_config.py  risk_agent.py  simple_runner.py
src/: __init__.py  api_server.py
src/data/: territories.json
src/game/: __init__.py  cards.py  combat.py  game_state.py  notepad.py  player.py  territory.py
src/persistence/: __init__.py  action_tracker.py  game_persistence.py
src/tournament/: __init__.py  character_manager.py  model_manager.py  tournament_manager.py
src/utils/: __init__.py  game_manager.py  logger.py
